<resources>
    <string name="app_name">AplicativoSustentavel</string>
    <string name="haiky_henta">Haiky Henta</string>
    <string name="circulo_preto">Circulo preto</string>
    <string name="Voleyballicon">volleyball icon</string>
    <string name="nome">NOME</string>
    <string name="Tobio">Tobio Kageyama</string>
    <string name="KiyokoShimizu">Personagem</string>
    <string name="TobioKageyama">Personagem</string>
    <string name="Volleyballicon">Volleyball icon</string>
    <string name="Aviso">Escolha seu personagem!</string>
    <string name="materiais">Materiais</string>
    <string name="metas">Metas</string>
    <string name="imagemobjetivos">Objetivos</string>
    <string name="objetivos">Objetivos</string>
    <string name="iniciar">INICIAR</string>
    <string name="Personagem">Personagem</string>
    <string name="balaoflutuante">Que tal escolher os materiais a cima? Lembre-se de escolher os que não ferem o meio ambiente!</string>
    <string name="balao">balao</string>
    <string name="proximo">Próximo</string>
    <string name="par_bens_continue_protegendo_o_meio_ambiente">Parábens! Continue protegendo o meio ambiente!</string>
    <string name="retangulolaranja">retangulolaranja</string>
    <string name="voltar_ao_in_cio">Voltar ao início</string>
    <string name="bola1">bola de volei 1\n</string>
    <string name="jogar">Jogar</string>
    <string name="tinta_leo">Tinta óleo</string>
    <string name="l_tex_borracha">Látex/Borracha</string>
    <string name="papel">Papel</string>
    <string name="fibra_de_carbono">Fibra de carbono</string>
    <string name="montar">Montar…</string>
</resources>