<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtobjetivos3"
        android:layout_width="99dp"
        android:layout_height="44dp"
        android:background="#000000"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:text="@string/materiais"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="73dp"
        android:contentDescription="@string/Volleyballicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/volleyball_ball_icon_png" />

    <ImageButton
        android:id="@+id/imgbtn3"
        android:layout_width="103dp"
        android:layout_height="98dp"
        android:contentDescription="@string/materiais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2023_06_16_at_11_54_37__1_"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imgbtn2"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:contentDescription="@string/metas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2023_06_16_at_11_54_37__3_"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imgbtn1"
        android:layout_width="101dp"
        android:layout_height="95dp"
        android:contentDescription="@string/imagemobjetivos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/whatsapp_image_2023_06_16_at_11_54_37__2_"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="198dp"
        android:layout_height="84dp"
        android:backgroundTint="#FF5900"
        android:fontFamily="@font/bangers"
        android:text="@string/iniciar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtobjetivos"
        android:layout_width="99dp"
        android:layout_height="44dp"
        android:background="#000000"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:text="@string/objetivos"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/txtobjetivos2"
        android:layout_width="99dp"
        android:layout_height="44dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:text="@string/metas"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="MissingConstraints,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>