<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Voleyballicon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5900"
    android:backgroundTint="#FF5900"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/haiky_henta"
        android:textColor="#000000"
        android:textSize="77sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/circleblack"
        android:layout_width="60dp"
        android:layout_height="69dp"
        android:contentDescription="@string/circulo_preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/circulo_preto_1" />

    <ImageView
        android:id="@+id/circleblack2"
        android:layout_width="60dp"
        android:layout_height="69dp"
        android:contentDescription="@string/circulo_preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        app:srcCompat="@drawable/circulo_preto_1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="95dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/volleyball_ball_icon_png"
        app:tint="#000000"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/Voleyballicon" />

</androidx.constraintlayout.widget.ConstraintLayout>